E2J/part4/t16.output
running e2j
redeclaration of variable a
redeclaration of variable a
redeclaration of variable a
redeclaration of variable a
compiling the Java generated code
My_e2j.java:4: error: variable x_a is already defined in method main(String[])
int x_a;
    ^
My_e2j.java:5: error: variable x_a is already defined in method main(String[])
int x_a;
    ^
My_e2j.java:6: error: variable x_a is already defined in method main(String[])
int x_a;
    ^
My_e2j.java:7: error: variable x_a is already defined in method main(String[])
int x_a;
    ^
4 errors
